# meta-utilities

./: .gitignore  AGENTS.md  INSTALLATION.md  NEXT.md  PRD.md  README.md  test-push.txt
.context-dogfood/research/artifacts/: c39ae1cdd9fc.json  c39ae1cdd9fc.md
.context/research/artifacts/: 0bf8207ed40c.json  0bf8207ed40c.md  0cf0fe4970a9.json  0cf0fe4970a9.md  14a6cb3c0be9.json  14a6cb3c0be9.md  3159a9c18893.json  3159a9c18893.md  33a14f2fd684.json  33a14f2fd684.md  357e687415ca.json  357e687415ca.md  387c4518e92a.json  387c4518e92a.md  3bdc9294db97.json  3bdc9294db97.md  40aca87fa464.json  40aca87fa464.md  44db9b583081.json  44db9b583081.md  47119f33bc47.json  47119f33bc47.md  4950085870e1.json  4950085870e1.md  521238ea0082.json  521238ea0082.md  5415e95beb98.json  5415e95beb98.md  544f3b828de8.json  544f3b828de8.md  598ca5e10636.json  (+47 more)
.github/workflows/: scenario-research-surreal-integration.yml
camel-oasis-scaffold/: ARCHITECTURE.md  README.md  dvc.yaml  pyproject.toml  sources.json
camel-oasis-scaffold/configs/: models.yaml
camel-oasis-scaffold/examples/: multi_scenarios.json
camel-oasis-scaffold/notebooks/: 04_uplift_pymc.ipynb
camel-oasis-scaffold/scripts/: serve_local.sh  setup_mlx.sh  setup_ollama.sh
camel-oasis-scaffold/src/: cli.py  model_factory.py
camel-oasis-scaffold/src/analysis/: db_loader.py  figures.py  metrics.py
camel-oasis-scaffold/src/auto_research/: cost.py  prompts.py  workforce.py
camel-oasis-scaffold/src/camel_sim/: __init__.py  modal_app.py
camel-oasis-scaffold/src/camel_sim/config/: __init__.py  models.py  scenarios.py
camel-oasis-scaffold/src/camel_sim/inference/: __init__.py  model_router.py  sglang_server.py
camel-oasis-scaffold/src/camel_sim/results/: __init__.py  collector.py
camel-oasis-scaffold/src/camel_sim/simulation/: __init__.py  actions.py  evaluator.py  runner.py  state.py
camel-oasis-scaffold/src/models/: bayesian_ab.py  bounded_confidence.py  hawkes.py  sir.py
camel-oasis-scaffold/src/scenarios/: info_spread.py  marketing_ab.py  opinion_dynamics.py  profile_gen.py
cli/: README.md
cli/oteemo-assistant/: README.md  UI_UX_RECOMMENDATIONS.md  package-lock.json  package.json  tsconfig.json
docs/: abstraction-roadmap.md  batch-orchestration.md  deep-research-architecture.md  formal-validation-midspiral-quint.md  gap-analysis.md  memory-unification.md  scenario-research-rubric-evaluation.md  skill-install-patterns.md  timeout-patterns.md  turbovec-integration.md
docs/outreach/: 2026-06-06_mini-oden-reengagement-messaging-scenarios.md
formal/midspiral/: rule-claim-check.yaml  rule-sandbox-lifecycle.yaml
formal/quint/: counter.qnt  mutex.qnt
mcp-servers/batch-orchestrator/: Dockerfile  README.md  pyproject.toml
mcp-servers/batch-orchestrator/batch_orchestrator/: __init__.py  cli.py  engine.py  models.py  pipeline.py  providers.py  server.py  store.py
mcp-servers/batch-orchestrator/batch_orchestrator/batch_providers/: __init__.py  anthropic_batch.py  base.py  openai_batch.py  xai_batch.py
mcp-servers/batch-orchestrator/tests/: test_batch_deep_research_ratchet.py  test_engine.py  test_models.py  test_pipeline.py
mcp-servers/deep-research/: DEEP_RESEARCH.md  Dockerfile  README.md  deep_research_mcp.py  pyproject.toml
mcp-servers/deep-research/templates/: grok-config-snippet.toml
mcp-servers/research-memory/: README.md  pyproject.toml  research_memory_mcp.py
mcp-servers/scenario-research/: README.md  pyproject.toml
mcp-servers/scenario-research/docs/: ci_quality_gates.md  cost_telemetry_schema.md  db_schema_baseline.md  memory_and_orchestration.md  optional-artifacts.md  recommended-artifacts.md
mcp-servers/scenario-research/ontology/agents/: linkml_schema.yaml  policies.yaml  population_templates.yaml  roles.yaml  scenarios.yaml  tools.yaml
mcp-servers/scenario-research/ontology/memory/: linkml_data_model.yaml
mcp-servers/scenario-research/oteemo/data/: oteemo_firm_init.yaml
mcp-servers/scenario-research/oteemo/demos/: __init__.py  oteemo_billable_max.py
mcp-servers/scenario-research/oteemo/docs/: oteemo-billable.md
mcp-servers/scenario-research/oteemo/ontology/agents/: policies.yaml  roles.yaml  tools.yaml
mcp-servers/scenario-research/oteemo/optimization/: oteemo.py
mcp-servers/scenario-research/oteemo/scenarios/: oteemo_billable.py
mcp-servers/scenario-research/scenario_research/: __init__.py  agent_compiler.py  analytics.py  cli.py  linkml_surreal.py  linkml_weaviate.py  models.py  observability.py  ontology_ingest.py  research_pipeline.py  router.py  scaffold_adapter.py  server.py  timeouts.py  validation.py
mcp-servers/scenario-research/scenario_research/optimization/: pulp_optimizer.py  replay.py
mcp-servers/scenario-research/scripts/: bootstrap.sh
mcp-servers/scenario-research/templates/: cursor-mcp.json  grok-config-snippet.toml  scenario-replicates.example.yaml
mcp-servers/scenario-research/tests/: test_contracts.py  test_multi_scenario_service.py  test_surreal_integration.py
mcp-servers/scenario-research/tests/bdd/features/: odrs_core.feature
research/artifacts/: a2b26642c1ee.json  a2b26642c1ee.md  f4974b10ddc3.json  f4974b10ddc3.md
research/indexes/: research-memory-idmap.json  research-memory.tvim
scripts/: bootstrap.sh  ensure-local-dbs.sh  install-firecrawl.sh  measure_research_metrics.py  oteemo-assistant  smoke_check.sh  verify_midspiral_rules.sh
skills/batch-research/: SKILL.md
skills/context-forge/: SKILL.md
skills/deep-research/: SKILL.md
skills/research-memory/: SKILL.md
templates/batch/: jobs.example.yaml  jobs.research-deep-pipeline.yaml  program.md
templates/context/: .contextignore  config.yaml
templates/cursor/: mcp.json  mcp.json.example
templates/grok/: combined-context-and-research.toml  full-recommended.toml  local-dev-deep-research.toml
templates/local-dbs/: docker-compose.yml
tests/: conftest.py  index_with_turbovec.py  test_deep_research_hooks.py  test_deep_research_mcp.py  test_deep_research_pipeline_ratchet.py  test_research_memory_mcp.py  test_research_metrics.py  test_turbovec_real_embed.py
(+28 files in other folders)
