[project]
name = "camel-oasis-deepresearch"
version = "0.1.0"
description = "OASIS + CAMEL Workforce + math models for scenario deep research on Apple M4"
requires-python = ">=3.10,<3.13"
dependencies = [
    "camel-ai[all]>=0.2.30",
    "camel-oasis>=0.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "polars>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "networkx>=3.3",
    "scikit-learn>=1.5",
    "pymc>=5.16",
    "tick>=0.7.0.1; platform_system != 'Darwin' or platform_machine != 'arm64'",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
mlx = ["mlx>=0.18", "mlx-lm>=0.19"]
modal = ["modal"]
parquet = ["pyarrow"]
dev = ["pytest>=8", "ruff>=0.6", "jupyterlab>=4.2", "ipywidgets>=8.1"]

[project.scripts]
oasis-research = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
