[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-memory"
version = "0.1.0"
description = "Specialized MCP for persistent research memory (PARA files + turbovec/Weaviate citation graphs + prior report RAG)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Clifford Dalson III"}
]
dependencies = [
  "fastmcp>=3",
  "turbovec",
  "pyyaml>=6",
]

[project.optional-dependencies]
vector = [
  # numpy<2 keeps ABI compatibility with the torch 2.2.x wheel that the
  # sentence-transformers stack resolves to (torch is built against numpy 1.x;
  # numpy 2.x triggers "_ARRAY_API not found" and a cascading transformers failure).
  "numpy>=1.26,<2",
  # transformers/sentence-transformers <5: the 5.x line requires torch>=2.4, which is
  # unavailable on some targets (e.g. x86_64 macOS caps at torch 2.2.x). The 4.x line
  # installs everywhere and keeps torch detected, avoiding a transformers import crash.
  "transformers>=4.41,<5",
  "sentence-transformers>=2.2,<5",
  "weaviate-client>=4",
]
# firecrawl is external (no py dep); used by deep-research for grounding, this for citation verification in future
# deep-research + batch declare the cross optional research/firecrawl groups

[project.scripts]
research-memory = "research_memory_mcp:main"

[project.urls]
Homepage = "https://github.com/clifforddalsoniii/meta-utilities"
Repository = "https://github.com/clifforddalsoniii/meta-utilities/tree/main/mcp-servers/research-memory"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
